test/errors/resolution/ifBranches.compopts
--detailed-errors # ifBranches-detailed.good
--no-detailed-errors # ifBranches-brief.good
